src/scss/components/_core.scss
/** Core Table */

.wp-block-table {
	.wp-element-caption {
		font-size: var(--wp--preset--font-size--small);
		margin-top: var(--wp--preset--spacing--x-small);
	}

	th {
		background: var(--wp--preset--color--smokey);
		color: var(--wp--preset--color--white);
		border: 1px solid var(--wp--preset--color--smokey);
		font-weight: var(--wp--custom--font-weight--bold);
		text-align: left;
		padding: var(--wp--preset--spacing--x-small);
	}

	td {
		padding: var(--wp--preset--spacing--x-small);
		border: 1px solid #bdbdbd;
	}

	tfoot td {
		border-top-width: 4px;
	}

	tr:nth-child(even) {
		background: var(--wp--preset--color--light);
	}
}

/** Core Separator */

.wp-block-separator {
	color: var(--wp--preset--color--orange);
	border-width: 6px;
	height: 6px;
}

.wp-block-separator.is-style-utkwds-orange-separator {
	border-width: 2px;
	height: 2px;
	width: 100px;
	margin: 0;
}

/** Core Quote */

.wp-block-quote:not(.utkwds-quote) {
	display: flex;
	flex-direction: column;

	cite {
		display: flex;
		flex-direction: column;
		margin-top: var(--wp--preset--spacing--x-small);
		padding-left: 0;
		position: relative;
		align-self: flex-end;
		max-width: 236px;

		&:after {
			content: "";
			position: absolute;
			height: 2px;
			background-color: var(--wp--preset--color--orange);
			top: 50%;
			width: 90px;
			left: -110px;
		}
	}
}

/** Core Pullquote */

.wp-block-pullquote {
	blockquote:not(.utkwds-quote) {
		display: flex;
		flex-direction: column;
		text-align: left;
		padding-left: calc(45px + var(--wp--preset--spacing--x-small));
		position: relative;
	}
	&::before {
		position: absolute;
		content: "";
		background: url("./assets/svg/quote.svg") no-repeat;
		background-size: 45px 35px;
		width: 45px;
		height: 35px;
		display: block;
	}

	cite {
		display: flex !important;
		flex-direction: column;
		margin-top: var(--wp--preset--spacing--x-small);
		padding-left: 0;
		position: relative;
		align-self: flex-end;
		max-width: 236px;
		&:before {
			content: "";
			position: absolute;
			height: 2px;
			background-color: var(--wp--preset--color--orange);
			top: 50%;
			width: 90px;
			left: -110px;
		}
	}

	&.is-style-utkwds-pullquote-smokey {
		color: var(--wp--preset--color--white);
		background: var(--wp--preset--color--smokey);
	}
}

/** Core List */

.wp-block-list li {
	margin-top: var(--wp--preset--spacing--x-small);
}
ul.wp-block-list ul.wp-block-list {
	list-style-type: circle;
}
ul.wp-block-list ul.wp-block-list ul.wp-block-list {
	list-style-type: square;
}
ul.wp-block-list ul.wp-block-list ul.wp-block-list ul.wp-block-list {
	list-style-type: "\25a1";
}
ul.wp-block-list ul.wp-block-list ul.wp-block-list ul.wp-block-list li {
	padding-inline-start: 0.5rem;
}
ul.wp-block-list
	ul.wp-block-list
	ul.wp-block-list
	ul.wp-block-list
	ul.wp-block-list {
	list-style-type: disc;
}
ul.wp-block-list
	ul.wp-block-list
	ul.wp-block-list
	ul.wp-block-list
	ul.wp-block-list
	li {
	padding-inline-start: initial;
}

/** Core Paragraph */

.is-style-utkwds-paragraph-large {
	font-size: var(--wp--preset--font-size--medium);
}
.is-style-utkwds-paragraph-small {
	font-size: var(--wp--preset--font-size--small);
}

/** Core Social Links */

.wp-block-social-links:not(.is-style-logos-only) {
	.wp-block-social-link {
		color: var(--wp--preset--color--white);
		background-color: var(--wp--preset--color--smokey);
	}
}

/** Core Gallery */

.wp-block-gallery.has-nested-images {
	figure.wp-block-image {
		&::before {
			display: none;
		}
		figcaption {
			position: static;
			background: none;
			color: var(--wp--preset--color--smokey);
			font-size: var(--wp--preset--font-size--small);
			text-align: left;
			text-shadow: none;
			padding-inline: 0;
			scrollbar-width: none;
			scrollbar-gutter: auto;
		}
	}
}

/** Core Details */

.wp-block-details {
	summary {
		display: flex;
		position: relative;
		font-weight: var(--wp--custom--font-weight--bold);

		&::after {
			content: "";
			width: 8px;
			height: 14px;
			background: url("./assets/svg/arrow.svg") no-repeat;
			background-size: cover;
			margin-left: 7px;
			transition: ease-in-out 0.2s;
			align-self: center;
		}
		&::-webkit-details-marker {
			display: none;
		}
	}

	&[open] > summary::after {
		transform: rotate(90deg);
	}
}

/** Core Image */

figure.wp-block-image.alignleft:not(
		.twoUp-gallery-img-sm,
		.twoUp-gallery-img-lg
	) {
	@media screen and (min-width: 1080px) {
		margin-left: calc((100% - var(--wp--style--global--content-size)) / 2);
	}
}

figure.wp-block-image.alignright:not(
		.twoUp-gallery-img-sm,
		.twoUp-gallery-img-lg
	) {
	@media screen and (min-width: 1080px) {
		margin-right: calc((100% - var(--wp--style--global--content-size)) / 2);
	}
}

/** Core RSS **/

ul.wp-block-rss {
	--right-spacing: 30px;
	--bottom-spacing: 40px;

	&:not(.is-grid) {
		padding: 10px 0 0;
		
		& > li {
			padding: 0 0 calc(var(--bottom-spacing) - 6px);
			border-bottom: 2px solid var(--wp--preset--color--orange);

			&:last-child {
				padding: 0;
				border-bottom: none;
			}
		}
	}
	&.is-grid {
		padding: 10px 0 0;

		& > li {
			margin: 0 0 var(--bottom-spacing);
			padding: 0 0 calc(var(--bottom-spacing) - 6px);
			border-bottom: 2px solid var(--wp--preset--color--orange);

			&:last-child {
				padding: 0;
				border-bottom: none;
			}

			@media (min-width: 600px) {
				margin: 0 var(--right-spacing) 80px 0;
				padding: 0 var(--right-spacing) 0 0;
				border-right: 2px solid var(--wp--preset--color--orange);
				border-bottom: none;
			}
		}
		&.columns-2 > li {
			@media (min-width: 600px) {
				width: calc(50% - var(--right-spacing));
			}

			&:nth-child(2n) {
				border-right: none;
			}
		}
		&.columns-3 > li {
			@media (min-width: 600px) {
				width: calc(33.33333% - var(--right-spacing));
			}

			&:nth-child(3n) {
				border-right: none;
			}
		}
		&.columns-4 > li {
			width: calc(25% - var(--right-spacing));

			&:nth-child(4n) {
				border-right: none;
			}
		}
		&.columns-5 > li {
			width: calc(20% - var(--right-spacing));

			&:nth-child(5n) {
				border-right: none;
			}
		}
		&.columns-6 > li {
			width: calc(16.66667% - var(--right-spacing));

			&:nth-child(6n) {
				border-right: none;
			}
		}
	}
}

.wp-block-rss__item {
	margin: 0 0 var(--bottom-spacing);
}

.wp-block-rss__item-title {
	margin: 0 0 10px;
	font-size: var(--wp--preset--font-size--medium);
	font-weight: var(--wp--custom--font-weight--medium);
	line-height: var(--wp--custom--line-height--heading);

	a {
		color: var(--wp--preset--color--smokey);
		text-decoration: none;

		&:hover {
			color: var(--wp--custom--color--river);
		}
	}
}

